# line-watch

./: LICENSE  README.md  pyproject.toml  test.txt
.github/: dependabot.yml
.github/workflows/: security.yml
line-watch/: __init__.py  cli.py  engine.py
line_watch/: cli.py  engine.py
tests/: test_engine.py
