[project]
name = "line-watch"
version = "1.0.2"
description = "A lightweight CLI regex line matcher"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
  { name="Sreehari", email="sreeharimsofficial@gmail.com" }
]
dependencies = []

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.scripts]
lw = "line_watch.cli:entry_point"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/SREEHARI-M-S/line-watch"
Repository = "https://github.com/SREEHARI-M-S/line-watch"
Issues = "https://github.com/SREEHARI-M-S/line-watch/issues"